# OrangeCoding

./: .gitignore  BUG_FIX.md  Cargo.toml  README.md  TODO.md  go.work  go.work.sum  lib
.claude/: ralph-loop.local.md  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml
crates/ceair-agent/: Cargo.toml
crates/ceair-agent/src/: agent_loop.rs  auto_dream.rs  cancellation.rs  compaction.rs  context.rs  executor.rs  fork.rs  hashline.rs  kairos.rs  lib.rs  mailbox.rs  memory.rs  memory_recall.rs  session_memory.rs  tool_summary.rs
crates/ceair-ai/: Cargo.toml
crates/ceair-ai/src/: lib.rs  provider.rs  stream.rs
crates/ceair-ai/src/providers/: deepseek.rs  mod.rs  qianwen.rs  wenxin.rs
crates/ceair-audit/: Cargo.toml
crates/ceair-audit/src/: chain.rs  lib.rs  logger.rs  sanitizer.rs  secrets.rs
crates/ceair-cli/: Cargo.toml
crates/ceair-cli/src/: main.rs  rpc.rs  slash.rs  slash_builtins.rs
crates/ceair-cli/src/commands/: config.rs  launch.rs  mod.rs  serve.rs  status.rs
crates/ceair-config/: Cargo.toml
crates/ceair-config/src/: config.rs  crypto.rs  discovery.rs  lib.rs  models_config.rs  source.rs
crates/ceair-core/: Cargo.toml
crates/ceair-core/src/: error.rs  event.rs  lib.rs  message.rs  types.rs
crates/ceair-mcp/: Cargo.toml
crates/ceair-mesh/: Cargo.toml
crates/ceair-mesh/src/: agent_registry.rs  lib.rs  message_bus.rs  model_router.rs  role_system.rs  shared_state.rs  task_orchestrator.rs
crates/ceair-tools/: Cargo.toml
crates/ceair-tools/src/: ask_tool.rs  bash_tool.rs  batch_partition.rs  fetch_tool.rs  file_tools.rs  find_tool.rs  grep_tool.rs  lib.rs  permissions.rs  registry.rs  security.rs  todo_tool.rs  tool_hooks.rs  web_search_tool.rs
crates/ceair-tui/: Cargo.toml
crates/ceair-tui/src/: app.rs  lib.rs  markdown.rs
crates/ceair-tui/src/components/: input.rs  mod.rs  session.rs  status.rs
crates/chengcoding-agent/: Cargo.toml
crates/chengcoding-agent/src/: agent_config.rs  agent_loop.rs  auto_dream.rs  buddy.rs  buddy_observer.rs  category.rs  compaction.rs  custom_tools.rs  dream_executor.rs  executor.rs  fork.rs  hooks.rs  intent_gate.rs  mailbox.rs  memdir.rs  memory.rs  memory_index.rs  message_group.rs  pipeline.rs  prompt_suggestion.rs  reinjection.rs  session_memory.rs  skills.rs  task_system.rs  tips.rs  ttsr.rs  verification.rs
crates/chengcoding-agent/src/agents/: atlas.rs  explore.rs  junior.rs  librarian.rs  metis.rs  mod.rs  prometheus.rs  sisyphus.rs
crates/chengcoding-ai/: Cargo.toml
crates/chengcoding-audit/: Cargo.toml
crates/chengcoding-audit/src/: chain.rs  lib.rs  logger.rs  sanitizer.rs  secrets.rs
crates/chengcoding-cli/: Cargo.toml
crates/chengcoding-cli/src/: main.rs  oauth.rs  rpc.rs  slash.rs  zellij.rs
crates/chengcoding-cli/src/commands/: config.rs  init.rs  launch.rs  serve.rs  status.rs
crates/chengcoding-config/: Cargo.toml
crates/chengcoding-config/src/: config.rs  crypto.rs  discovery.rs  jsonc.rs  lib.rs  models_config.rs  source.rs
crates/chengcoding-control-protocol/: Cargo.toml
crates/chengcoding-control-server/: Cargo.toml
crates/chengcoding-control-server/src/: audit_ext.rs  routes.rs  session_api.rs  session_router.rs  worker_api.rs  worker_registry.rs  ws.rs
crates/chengcoding-control-server/tests/: api_tests.rs
crates/chengcoding-core/: Cargo.toml
crates/chengcoding-mcp/: Cargo.toml
crates/chengcoding-mcp/src/: client.rs  protocol.rs  server.rs  transport.rs
crates/chengcoding-mesh/: Cargo.toml
crates/chengcoding-session/: Cargo.toml
crates/chengcoding-session/src/: blob.rs  entry.rs  lib.rs  manager.rs  storage.rs  tree.rs
crates/chengcoding-tools/: Cargo.toml
crates/chengcoding-tools/src/: ask_tool.rs  ast_tool.rs  bash_tool.rs  batch_partition.rs  browser_tool.rs  edit_tool.rs  fetch_tool.rs  file_tools.rs  find_tool.rs  grep_tool.rs  lib.rs  lsp_tool.rs  notebook_tool.rs  permissions.rs  python_tool.rs  registry.rs  security.rs  session_tools.rs  ssh_tool.rs  task_management.rs  task_tool.rs  todo_tool.rs  web_search_tool.rs
crates/chengcoding-tui/: Cargo.toml
crates/chengcoding-worker/: Cargo.toml
crates/chengcoding-worker/src/: gateway_client.rs  runtime.rs  session_bridge.rs
crates/orangecoding-agent/: Cargo.toml
crates/orangecoding-agent/src/: agent_loop.rs  compaction.rs  execution_prompt.rs  executor.rs  hooks.rs  instruction_anchor.rs  lib.rs  model_router.rs  pipeline.rs  step_budget.rs  task_system.rs  tool_summary.rs
crates/orangecoding-agent/src/agents/: hephaestus.rs  prometheus.rs  sisyphus.rs
crates/orangecoding-agent/src/harness/: drift.rs  mod.rs  supervisor.rs  types.rs
crates/orangecoding-agent/src/workflows/: atlas.rs  boulder.rs  goal.rs  mod.rs
docs/: agent_os.md  harness_engineering_go.md  harness_research_2026Q2.md  roadmap.md
docs/architecture/: agent-system.md  mesh.md  overview.md  security.md
docs/reference/: hooks.md  oauth.md  permissions.md  tools.md
docs/user-guide/: agents.md  commands.md  configuration.md  getting-started.md  workflows.md
modules/agent/: agent_test.go  compaction.go  context.go  doc.go  executor.go  fork.go  go.mod  harness_checkpoint_file.go  harness_context.go  harness_embedding.go  harness_engine.go  harness_guardrail.go  harness_handoff.go  harness_memory.go  harness_profile.go  harness_state.go  harness_test.go  harness_trace.go  hooks.go  intent_gate.go  loop.go  memory.go  skills.go  tool_defs.go  ttsr.go
modules/ai/: ai_test.go  anthropic.go  deepseek.go  doc.go  error.go  fallback.go  go.mod  openai.go  provider.go  qianwen.go  router.go  stream.go  types.go  wenxin.go
modules/audit/: audit.go  audit_test.go  doc.go  go.mod  go.sum
modules/cli/: cli_test.go  config.go  go.mod  go.sum  init.go  launch.go  root.go  serve.go  status.go  version.go
modules/config/: config.go  config_test.go  crypto.go  doc.go  go.mod  jsonc.go
modules/control-protocol/: doc.go  go.mod  messages.go  messages_test.go
modules/control-server/: doc.go  go.mod  go.sum  handlers.go  middleware.go  server.go  server_test.go  (+1 more)
(+180 files in other folders)
