[workspace]
members = [
    "crates/chengcoding-core",
    "crates/chengcoding-agent",
    "crates/chengcoding-tools",
    "crates/chengcoding-ai",
    "crates/chengcoding-mesh",
    "crates/chengcoding-config",
    "crates/chengcoding-audit",
    "crates/chengcoding-tui",
    "crates/chengcoding-mcp",
    "crates/chengcoding-cli",
    "crates/chengcoding-session",
    "crates/chengcoding-control-protocol",
    "crates/chengcoding-control-server",
    "crates/chengcoding-worker",
    "crates/chengcoding-invariant",
]
resolver = "2"

[package]
name = "chengcoding-workspace-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
chengcoding-core = { workspace = true }
chengcoding-agent = { workspace = true }
chengcoding-tools = { workspace = true }
chengcoding-control-protocol = { workspace = true }
chengcoding-control-server = { workspace = true }
chengcoding-worker = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[[test]]
name = "auth_invariants"
path = "tests/invariants/auth_invariants.rs"

[[test]]
name = "cancellation_invariants"
path = "tests/invariants/cancellation_invariants.rs"

[[test]]
name = "session_invariants"
path = "tests/invariants/session_invariants.rs"

[[test]]
name = "tool_permission_invariants"
path = "tests/invariants/tool_permission_invariants.rs"

[[test]]
name = "approval_invariants"
path = "tests/invariants/approval_invariants.rs"

[[test]]
name = "event_invariants"
path = "tests/invariants/event_invariants.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OrangeCoding Team"]
license = "Apache-2.0"
repository = "https://github.com/woyin/OrangeCoding"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
sled = "0.34"
ring = "0.17"
base64 = "0.22"
ratatui = "0.24"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
url = "2.5"
config = "0.14"
mockall = "0.12"
tempfile = "3.9"
chengcoding-core = { path = "crates/chengcoding-core" }
chengcoding-agent = { path = "crates/chengcoding-agent" }
chengcoding-tools = { path = "crates/chengcoding-tools" }
chengcoding-ai = { path = "crates/chengcoding-ai" }
chengcoding-mesh = { path = "crates/chengcoding-mesh" }
chengcoding-config = { path = "crates/chengcoding-config" }
chengcoding-audit = { path = "crates/chengcoding-audit" }
chengcoding-tui = { path = "crates/chengcoding-tui" }
chengcoding-mcp = { path = "crates/chengcoding-mcp" }
chengcoding-session = { path = "crates/chengcoding-session" }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
chengcoding-control-protocol = { path = "crates/chengcoding-control-protocol" }
chengcoding-control-server = { path = "crates/chengcoding-control-server" }
chengcoding-worker = { path = "crates/chengcoding-worker" }
