[package]
name = "ceair-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI provider adapters for CEAIR"

[dependencies]
ceair-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
