[package]
name = "ceair-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Audit logging system for CEAIR"

[dependencies]
ceair-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ring = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
