[package]
name = "ceair-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for CEAIR"

[dependencies]
ceair-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
