[package]
name = "ceair-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool system and file operations for CEAIR"

[dependencies]
ceair-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
