[package]
name = "chengcoding-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for OrangeCoding"

[dependencies]
chengcoding-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
