[package]
name = "chengcoding-control-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP and WebSocket control server for OrangeCoding"

[dependencies]
chengcoding-core = { workspace = true }
chengcoding-control-protocol = { workspace = true }
chengcoding-worker = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { workspace = true, features = ["util"] }
serde_json = { workspace = true }
chrono = { workspace = true }
