[package]
name = "chengcoding-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) implementation for OrangeCoding"

[dependencies]
chengcoding-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
