[package]
name = "chengcoding-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Session management with JSONL tree storage for OrangeCoding"

[dependencies]
chengcoding-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
