[package]
name = "chengcoding-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool system and file operations for OrangeCoding"

[dependencies]
chengcoding-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
